added missing pages in directory